# kafko

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: codec.rs  partition.rs
crates/kafko/: Cargo.toml  README.md
crates/kafko-bench/: Cargo.toml
crates/kafko-bench/baselines/: baseline_2026-05-24.md  baseline_2026-05-24_post_std_fs.md  baseline_2026-05-24_post_std_fs_throughput.md  baseline_2026-05-24_post_wins_1_2.md  baseline_2026-05-24_post_wins_1_2_throughput.md  baseline_2026-05-24_throughput.md  baseline_2026-05-25_v0_1_1.md  baseline_2026-05-29_v0_2_0.md  baseline_2026-06-07_v0_3_0.md
crates/kafko-bench/src/: main.rs
crates/kafko-http/: Cargo.toml
crates/kafko-http/src/: main.rs
crates/kafko/benches/: config_sweep.rs  partition.rs  send_batch.rs
crates/kafko/src/: broker.rs  compression.rs  consumer.rs  error.rs  lib.rs  log.rs  offset_store.rs  partition.rs  position.rs  producer.rs  record.rs  segment.rs  sparse_index.rs  topic.rs
crates/kafko/tests/: broker.rs  consumer.rs  consumer_group.rs  log.rs  partition.rs  partitioning.rs  producer.rs  properties.rs  recovery.rs  retention.rs  segment.rs  send_batch.rs  sparse_index.rs
docs/: design-bufwriter.md  perf-measurement-gameplan.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_record.rs  decode_record_structured.rs  log_op_sequence.rs  offset_store_parse.rs  recovery_torn_tail.rs  sparse_index_parse.rs  topic_layout_recovery.rs  topic_routing.rs
scripts/: Dockerfile  README.md  kafka_bench.ps1  kafka_bench.sh  kafka_bench_max.ps1  kafka_bench_unbatched.ps1  kafko_docker_bench.ps1  kafko_hotpath_matrix.ps1  kafko_http_bench.ps1  kafko_http_samply_bench.ps1  kafko_lib_multisize_bench.ps1  kafko_lib_samply_bench.ps1
src/: broker.rs  log.rs  partition.rs  producer.rs  record.rs  sparse_index.rs
tests/: broker.rs  producer.rs  recovery.rs
