[package]
name = "kafko"
version = "0.1.0"
edition = "2024"
description = "In-process Kafka-semantics log: topics, partitions, offset-based reads, replay, retention."
license = "MIT OR Apache-2.0"
keywords = ["kafka", "log", "event-sourcing", "embedded", "wal"]
categories = ["data-structures", "asynchronous"]

[dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
bytes = "1"
crc32fast = "1"
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
thiserror = "2.0.18"
zstd = "0.13"

# Optional — only pulled in when --features http-server is enabled
axum = { version = "0.7", optional = true }
anyhow = { version = "1", optional = true }

[features]
default = []
http-server = ["axum", "anyhow"]

[[bin]]
name = "kafko_http"
path = "src/bin/kafko_http.rs"
required-features = ["http-server"]

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "partition"
harness = false


[profile.bench]
lto = "fat"
codegen-units = 1
