[package]
name = "kafko-bench"
version = "0.1.0"
edition = "2024"
publish = false
description = "In-process kafko bench harness; profiles kafko storage without HTTP/axum overhead in the flame graph."

[dependencies]
kafko = { path = "../kafko" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
bytes = "1"
anyhow = "1"
hotpath = { version = "0.16.1", optional = true }

[features]
default = []
# Turning on `hotpath` activates instrumentation on this binary AND on the
# kafko library (via kafko/hotpath). The sub-features are pass-throughs to
# enable specific hotpath capabilities; each implies the base hotpath feature.
hotpath        = ["dep:hotpath", "hotpath/hotpath", "kafko/hotpath"]
hotpath-cpu    = ["hotpath", "hotpath/hotpath-cpu"]
hotpath-alloc  = ["hotpath", "hotpath/hotpath-alloc"]
hotpath-mcp    = ["hotpath", "hotpath/hotpath-mcp"]
