[package]
name = "kafko-bench"
version = "0.3.0"
edition = "2024"
publish = false
description = "In-process kafko bench harness; profiles kafko storage without HTTP/axum overhead in the flame graph."

[dependencies]
kafko = { path = "../kafko" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
bytes = "1"
anyhow = "1"
hotpath = { version = "0.16.1", optional = true }

[features]
default = []
# Turning on `hotpath` activates instrumentation on this binary AND on the
# kafko library (via kafko/hotpath). The sub-features are pass-throughs to
# enable specific hotpath capabilities; each implies the base hotpath feature.
hotpath        = ["dep:hotpath", "hotpath/hotpath", "kafko/hotpath"]
hotpath-cpu    = ["hotpath", "hotpath/hotpath-cpu"]
hotpath-alloc  = ["hotpath", "hotpath/hotpath-alloc"]
hotpath-mcp    = ["hotpath", "hotpath/hotpath-mcp"]

# Pass-throughs for kafko's compression codecs. kafko-bench's source also
# uses `#[cfg(feature = "compression-lz4")]` to gate the lz4_sequential and
# zstd_sequential scenarios, so `compression-all` here must activate both
# sub-features (not only kafko's umbrella).
compression-lz4  = ["kafko/compression-lz4"]
compression-zstd = ["kafko/compression-zstd"]
compression-all  = ["compression-lz4", "compression-zstd"]
